--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
 					<div id="content" class="8u skel-cell-important">
 						<section>
 							<header>
-								<h2>The data</h2>
-								<span class="byline">What is Urban Transformation</span>
+								<h2>The dataset</h2>
+								<span class="byline">Context of data</span>
 							</header>
-							<p>Urban transformation is a kind a change to promotes the city progress well.</p>
+							<p>The assigned dataset I'm analysing is the 2011 and 2016 census data on<strong> Method pf travel to work</strong></p>
 							
 						</section>
 					</div>
