--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 								<h2>The dataset</h2>
 								<span class="byline">Context of data</span>
 							</header>
-							<p>The assigned dataset I'm analysing is the 2011 and 2016 census data on<strong> Method pf travel to work</strong></p>
+							<p>The assigned dataset I'm analysing is the 2011 and 2016 census data on<strong> Method pf travel to work.</strong>This is sort by gender,allowing for acomprehensive understanding method of travel to work distribution throughout Austrilia. Since the geographical regions of SA1 has changed significantly over time, we will use the Postal Area instead. The dataset is collect to allow the government to check the method of travel to work to defined the level of people and the traffic situation of NSW.</p>
 							
 						</section>
 					</div>
