--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 				<nav id="nav">
 					<ul>
 						<li class="active"><a href="index.html">Homepage</a></li>
-						<li><a href="map.html">Olympic Park</a></li>					
-						<li><a href="download.html">Others</a></li>
+						<li><a href="map.html">Map</a></li>					
+						<li><a href="download.html">Download</a></li>
 					</ul>
 				</nav>
 			</div>
