--- a/map.html
+++ b/map.html
@@ -35,8 +35,8 @@
 				<nav id="nav">
 					<ul>
 						<li class="active"><a href="index.html">Homepage</a></li>
-						<li><a href="map.html">Olympic Park</a></li>
-						<li><a href="download.html">Others</a></li>
+						<li><a href="map.html">Map</a></li>
+						<li><a href="download.html">Download</a></li>
 				</nav>
 			</div>
 		</div>
