--- a/map.html
+++ b/map.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Olympic Park</title>
+		<title>CODE1230</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -46,45 +46,28 @@
 			<div class="container">
 				<div class="row"> 
 
-					<!-- Sidebar -->
-					<div id="sidebar" class="4u">
-						<section>
-							<header>
-								<h2>How Olympic Park looks like</h2>
-							</header>
-							<ul class="style">
-								<li>
-									<p class="posted">Ecological Corridor</p>
-									<img src="Olympic/shengtaiqiao.png" alt="" width="300" height="200"/>
-									<p class="text">Key idea of Olympic park</p>
-								</li>
-								<li>
-									<p class="posted">April 29, 2006  |  How it is looks like before</p>
-									<img src="Olympic/jiansheqian.jpg" alt=""width="300" height="200" />
-									<p class="text">Government is  getting ready to develope the park</p>
-								</li>
-								<li>
-									<p class="posted">Now |  Wedding photograph</p>
-									<img src="Olympic/hunsha.jpg" alt=""width="300" height="200" />
-									<p class="text">Because the peaceful and pretty environment, people always take photo here</p>
-								</li>
-								<li>
-									<p class="posted">Now  |  Get into the environment</p>
-									<img src="Olympic/yizi.jpg" alt=""width="300" height="200" />
-									<p class="text">People sitting in the forest</p>
-								</li>
-							</ul>
-						</section>
-					</div>
+			
 					
 					<!-- Content -->
 					<div id="content" class="8u skel-cell-important">
 						<section>
 							<header>
-								<h2>Olympic Park</h2>
-								<span class="byline">Why Olympic Park</span>
+								<h2>Maps</h2>
+								<span class="byline">How is the map like</span>
 							</header>
-							<a href="#" class="image full"><img src="Olympic/ta.jpg" alt="" /></a>
+							<html>
+
+<body>
+
+<iframe src="https://leowuyuqi.github.io/CODE1230-assesment-2-map1/"></iframe>
+
+<p>This is the map of go to work by car as a driver</p
+<p>And it is compare by gender</p>
+
+
+</body>
+</html>
+
 							<p>Olympic Park is building for the Olympic game which hold in beijing 2008.The park covers an area of 680 hectares, including 380 hectares in the south and 300 hectares in the north.Park forest resources, mainly to trees and shrubs, greening coverage of 95.61%. Olympic Park used to be a natrual forest so government decide to use it improve and protect the environment.it is placed in Beijing between 4th round and 5th round.So it means Olympic park is a huge park with a high rate of plant coverage </p>
 							<p>For tourist who play in the park, they are looking for a peaceful and leanning places. in a research by a uni's case study, it shows the level of noise in Olympic park is 76.7% lower than road out of park, and the pm2.5 is also m86.5%lower than outside.(The North China University of Technology,case study by He Shuang,Geng Chao,Yang Xin)</p>
 							<p>By 2008, the park had more than 100 species of 530,000 trees, more than 80 shrubs and more than 100 groundcover plants, forming a natural forest system based on biodiversity.From it built till now the park has already produces 5,400 tons of oxygen, assimilate 32 tons of sulfur dioxide and 4,905 tons of dust for trees.<p>
