--- a/map.html
+++ b/map.html
@@ -59,10 +59,10 @@
 
 <body>
 
-<iframe src="https://leowuyuqi.github.io/CODE1230-assesment-2-map1/"></iframe>
+<iframe src="https://leowuyuqi.github.io/CODE1230-assesment-2-map1/"width="400" height="300"></iframe>
 
-<p>This is the map of go to work by car as a driver</p
-<p>And it is compare by gender</p>
+	<p><strong>This is the map of go to work by car as a driver</strong></p>
+	<p><strong>And it is compare by gender</strong></p>
 
 
 </body>
