--- a/map.html
+++ b/map.html
@@ -83,15 +83,15 @@
 
 							<p>The Australia's commuting statistics reveal the main modes of transport by which residents get to work. There are a number of reasons why people use different modes of transport to get to work including the availability of affordable and effective public transport options, the number of motor vehicles available within a household, and the distance travelled to work.
 Commuting data is very useful in transport planning as it informs decision-makers about the availability, effectiveness and utilisation of local transport options, particularly when analysed with Residents Place of Work data and Car Ownership.</p>
-							<p>Dominant groups
+							<p>
 
-In 2016, there were 1,213,187 people who caught public transport to work (train, bus, tram or ferry) in Australia, compared with 7,214,953 who drove in private vehicles (car â€“ as driver, car â€“ as passenger, motorbike, or truck).
+In 2016, there were 1,213,187 people who caught public transport to work (train, bus, tram or ferry) in Australia, compared with 7,214,953 who drove in private vehicles (car as driver, car as passenger, motorbike, or truck).
 Analysis of the method of travel to work of the residents in the Australia in 2016, compared to New South Wales, shows that 11.4% used public transport, while 67.5% used a private vehicle, compared with 15.9% and 63.7% respectively in New South Wales.
 The major differences in persons between the method of travel to work of the Australia and New South Wales were:
 A larger percentage of persons who travelled by car (as driver) (61.5% compared to 57.8%)
 A smaller percentage of persons who travelled by train (7.2% compared to 11.2%)
 
-Emerging groups
+
 
 The number of employed people in Australia increased by 627,091 between 2011 and 2016.
 
