--- a/map.html
+++ b/map.html
@@ -27,8 +27,8 @@
 				
 				<!-- Logo -->
 				<div id="logo">
-					<h1><a href="#">Olympic Park</a></h1>
-					<span>Empty to Crowded</span>
+					<h1><a href="#">CODE1230</a></h1>
+					<span>Maps and Analysis</span>
 				</div>
 				
 				<!-- Nav -->
