--- a/map.html
+++ b/map.html
@@ -131,7 +131,14 @@ Car - as passenger (-47,543 persons)</p>
 				</div>
 			</div>
 		</div>
-			
+			<div id="content" class="8u skel-cell-important">
+						<section>
+							<header>
+								<h2>Conclusion</h2>
+							</header>
+							<p>1.More and mmore people choose go to work by drive cars.</p>
+							<p>2.If more people can afford a car that means the economic of Austrilia is increasing. People's income is growing.</p>
+							<p>3.More drivers means that the traffic will be aproblem in th futures and the traffics"s rule need to be more compeletly.</p>
 
 
 
