--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 								<h2>Backgorund</h2>
 								<span class="byline">Method of travel to work by sex</span>
 							</header>
-							<a href="#" class="image full"><img src="Olympic/gongyuan.jpg" alt="" /></a>
+							<a href="#" class="image full"><img src="images/icon.jpg" alt="" /></a>
 							<p><strong>Method of travel to work</strong>is a big problem for office worker,they always consider about how to get to company. Most of people decide take bus but all we know driver our own car is a comfortale and convinient way to going out. This reasearch is going to discus the population of people travel to work by drving car and devide by sex.And I'm going to compare the data between 2011 and 2016 in NSW.</p>
 							
 						</section>
