--- a/map.html
+++ b/map.html
@@ -136,9 +136,9 @@ Car - as passenger (-47,543 persons)</p>
 							<header>
 								<h2>Conclusion</h2>
 							</header>
-							<p>1.More and mmore people choose go to work by drive cars.</p>
+							<p>1.More and more people choose go to work by drive cars.</p>
 							<p>2.If more people can afford a car that means the economic of Austrilia is increasing. People's income is growing.</p>
-							<p>3.More drivers means that the traffic will be aproblem in th futures and the traffics"s rule need to be more compeletly.</p>
+							<p>3.More drivers means that the traffic will be a problem in th futures and the traffics's rule need to be more compeletly.</p>
 
 
 
